Added redis for request limiting
